Move toolbar buttons closer to edges on smaller screen sizes. Fix margin issue on iOS for input buttons

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -271,6 +271,7 @@ nav a:active, #sessioninfo a:active {
 body.ios input.button {
 	line-height:0;
 	height:34px;
+	margin:0
 }
 
 .back {
